修改实体类类型

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,5 @@ spring.datasource.min-evictable-idle-time-millis=1800000
 #最大激活数量
 spring.datasource.max-active = 20
 
+spring.jpa.database = MYSQL
 spring.jpa.show-sql=true
