--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ##数据库配置属性
-spring.datasource.url=jdbc:mysql://localhost:3306/bl?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
+spring.datasource.url=jdbc:mysql://123.206.222.115:3306/bl?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=shipping
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # 使用druid数据源
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
